# ciellab

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  ThirdPartyNotices.txt  clang_tidy.cpp  conanfile.txt  format.sh  install_clang_format.sh  portable_header_process.sh
.github/workflows/: benchmark.yml  check_format.yml  portable_validity.yml  unit_test.yml
benchmark/: CMakeLists.txt
benchmark/benchmark-1.8.3/: CMakeLists.txt
benchmark/src/: all.cpp  atomic_shared_ptr.cpp  benchmark_config.h  hashtable.cpp  list_benchmarks.cpp  lock.cpp  shared_ptr.cpp  singleton.cpp  split_buffer_benchmarks.cpp  vector.cpp  vector_benchmarks.cpp
benchmark/src/hashtable/: bytell_hash_map.hpp  flat_hash_map.hpp  unordered_map.hpp  zoo.hpp
include/ciel/: aligned_storage.hpp  alignment.hpp  allocate_at_least.hpp  allocator_traits.hpp  as_const.hpp  atomic_shared_ptr.hpp  atomic_shared_ptr2.hpp  buffer_cast.hpp  can_be_destroyed_from_base.hpp  compare.hpp  compressed_pair.hpp  config.hpp  copy_n.hpp  cstring.hpp  datasizeof.hpp  demangle.hpp  do_if_noexcept.hpp  exchange.hpp  finally.hpp  function.hpp  hazard_pointer.hpp  hazard_pointers.hpp  inplace_vector.hpp  integer_sequence.hpp  is_complete_type.hpp  is_final.hpp  is_nullable.hpp  is_range.hpp  is_reference.hpp  is_trivially_relocatable.hpp  iterator_base.hpp  iterator_category.hpp  list.hpp  logical.hpp  memory.hpp  move_proxy.hpp  observer_ptr.hpp  range_destroyer.hpp  sbv_crtp_base.hpp  shared_ptr.hpp  (+11 more)
include/ciel/core/: aba.hpp  aligned_storage.hpp  alignment.hpp  array.hpp  as_const.hpp  avl_raw.hpp  avl_tree.hpp  can_be_destroyed_from_base.hpp  combining_lock.hpp  compressed_pair.hpp  config.hpp  cstring.hpp  datasizeof.hpp  do_if_noexcept.hpp  exchange.hpp  finally.hpp  integer_sequence.hpp  is_complete_type.hpp  is_final.hpp  is_nullable.hpp  is_range.hpp  is_reference.hpp  is_trivially_relocatable.hpp  iterator_base.hpp  iterator_category.hpp  logical.hpp  message.hpp  mpsc_queue.hpp  packed_ptr.hpp  pipe.hpp  rb_tree.hpp  reference_counter.hpp  singleton.hpp  spinlock.hpp  spinlock_ptr.hpp  strip_signature.hpp  to_chars.hpp  treiber_stack.hpp  wait_free_counter.hpp
include/ciel/experimental/: atomic_shared_ptr.hpp  list.hpp  move_proxy.hpp  worth_move.hpp
include/ciel/test/: different_allocator.hpp  exception_generator.hpp  fancy_allocator.hpp  forward_iterator.hpp  input_iterator.hpp  int_wrapper.hpp  memory_leak_check.hpp  operator_hijacker.hpp  propagate_allocator.hpp  random_access_iterator.hpp  range.hpp  sbv_assign_tests.hpp  sbv_constructor_tests.hpp  simple_latch.hpp
portable_headers/: atomic_shared_ptr.hpp  compressed_pair.hpp  config.hpp  finally.hpp  function.hpp  inplace_vector.hpp  integer_sequence.hpp  list.hpp  move_proxy.hpp  observer_ptr.hpp  range_destroyer.hpp  shared_ptr.hpp  small_vector.hpp  split_buffer.hpp  static_vector.hpp  strip_signature.hpp  type_traits.hpp  vector.hpp
test/: CMakeLists.txt
test/include/ciel/test/: different_allocator.hpp  emplace_constructible.hpp  exception_generator.hpp  explicit_allocator.hpp  fancy_allocator.hpp  forward_iterator.hpp  input_iterator.hpp  int_wrapper.hpp  limited_allocator.hpp  maybe_pocca_allocator.hpp  maybe_pocma_allocator.hpp  memory_leak_check.hpp  min_allocator.hpp  move_only.hpp  not_constructible.h  operator_hijacker.hpp  other_allocator.hpp  propagate_allocator.hpp  random_access_iterator.hpp  safe_allocator.hpp  sbv_constructor_tests.hpp  simple_latch.hpp  test_allocator.hpp
test/src/: all.cpp  allocator_traits.cpp  atomic_shared_ptr.cpp  atomic_shared_ptr2_tests.cpp  atomic_shared_ptr_test_suite.hpp  atomic_shared_ptr_tests.cpp  avl_raw.cpp  avl_tree.cpp  can_be_destroyed_from_base.cpp  combining_lock.cpp  compressed_pair.cpp  compressed_pair_tests.cpp  cstring.cpp  do_if_noexcept.cpp  exception_safety.cpp  exception_safety_tests.cpp  finally.cpp  finally_tests.cpp  function.cpp  function_tests.cpp  hazard_pointer.cpp  inplace_vector.cpp  inplace_vector_tests.cpp  is_nullable.cpp  list.cpp  list_tests.cpp  main.cpp  memory_leak_check.cpp  message.cpp  move_proxy_tests.cpp  mpsc_queue.cpp  observer_ptr.cpp  observer_ptr_tests.cpp  pipe.cpp  rb_tree.cpp  reference_counter.cpp  shared_ptr.cpp  shared_ptr_tests.cpp  singleton.cpp  small_vector_tests.cpp  (+21 more)
test/src/function/: constructor.cpp  overload_resolution.cpp
test/src/inplace_vector/: assign.cpp  constructor.cpp  emplace.cpp  erase.cpp  insert.cpp  trait.cpp  trivial.cpp  try_append_range.cpp
test/src/split_buffer/: assign.cpp  compare.cpp  constructor.cpp  data.cpp  emplace_back.cpp  empty.cpp  erase.cpp  print.cpp  resize.cpp  swap.cpp
test/src/vector/: assign.cpp  capacity.cpp  compare.cpp  constructor.cpp  data.cpp  emplace.cpp  emplace_back.cpp  empty.cpp  erase.cpp  exception_safety.cpp  insert.cpp  max_size.cpp  print.cpp  reserve.cpp  resize.cpp  shrink_to_fit.cpp  size.cpp  swap.cpp
